// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxGroup.component renders with minimal props 1`] = `
"<div class=\\"fieldset\\" jsx=\\"true\\"><style jsx=\\"true\\"></style><div class=\\"row \\" jsx=\\"true\\"><style jsx=\\"true\\"></style><div class=\\"label\\"><style></style><div class=\\"col-12 \\"><label class=\\"manor-body1 manor-spacing-label-to-field w-full\\">test</label></div></div><style jsx=\\"true\\">.row {
        @apply flex flex-wrap -mx-16;
      }
      </style></div><div class=\\"row \\" jsx=\\"true\\"><style></style><div class=\\"col-sm-11 \\"><div id=\\"test-group-id\\" class=\\"checkbox-group\\"><div class=\\"row \\" jsx=\\"true\\"><style></style><div class=\\"col-6 \\"><style></style><div class=\\"checkbox-wrap\\"><input id=\\"A-1\\" name=\\"A-1\\" type=\\"checkbox\\" class=\\"manor-checkbox-input\\"><label for=\\"A-1\\" class=\\"
            
            
          \\"><div class=\\"
            manor-checkbox 
            
            
          \\"></div><style></style><div class=\\"checkbox-content no-margin\\"><p>A-1 check</p></div></label></div></div><style></style><div class=\\"col-6 \\"><style></style><div class=\\"checkbox-wrap\\"><input id=\\"A-2\\" name=\\"A-2\\" type=\\"checkbox\\" class=\\"manor-checkbox-input\\"><label for=\\"A-2\\" class=\\"
            
            
          \\"><div class=\\"
            manor-checkbox 
            
            
          \\"></div><style></style><div class=\\"checkbox-content no-margin\\"><p>A-2 check</p></div></label></div></div><style></style><div class=\\"col-6 \\"><style></style><div class=\\"checkbox-wrap\\"><input id=\\"A-3\\" name=\\"A-3\\" type=\\"checkbox\\" class=\\"manor-checkbox-input\\"><label for=\\"A-3\\" class=\\"
            
            
          \\"><div class=\\"
            manor-checkbox 
            
            
          \\"></div><style></style><div class=\\"checkbox-content no-margin\\"><p>A-3 check</p></div></label></div></div><style jsx=\\"true\\">.row {
        @apply flex flex-wrap -mx-16;
      }
      </style></div></div></div><style jsx=\\"true\\">.row {
        @apply flex flex-wrap -mx-16;
      }
      </style></div><div class=\\"row \\" jsx=\\"true\\"><style></style><div class=\\"col-sm-11 \\"><div class=\\"relative w-full h-16 mb-8\\"><span class=\\"absolute w-full justify-start\\"></span></div></div><style jsx=\\"true\\">.row {
        @apply flex flex-wrap -mx-16;
      }
      </style></div></div>"
`;

exports[`CheckboxGroup.component renders with props 1`] = `
"<div class=\\"fieldset\\" jsx=\\"true\\"><style jsx=\\"true\\"></style><div class=\\"row \\" jsx=\\"true\\"><style jsx=\\"true\\"></style><div class=\\"label\\"><style></style><div class=\\"col-12 \\"><label class=\\"manor-body1 manor-spacing-label-to-field w-full\\"></label></div></div><style jsx=\\"true\\">.row {
        @apply flex flex-wrap -mx-16;
      }
      </style></div><div class=\\"row \\" jsx=\\"true\\"><style></style><div class=\\"col-sm-11 \\"><div id=\\"test-group-id\\" class=\\"checkbox-group\\"><div class=\\"row \\" jsx=\\"true\\"><style></style><div class=\\"col-5 \\"><style></style><div class=\\"checkbox-wrap\\"><input id=\\"A-1\\" name=\\"A-1\\" type=\\"checkbox\\" class=\\"manor-checkbox-input\\"><label for=\\"A-1\\" class=\\"
            
            
          \\"><div class=\\"
            manor-checkbox 
            
            
          \\"><style></style><svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" x=\\"0px\\" y=\\"0px\\" enable-background=\\"0 -4 44 44\\" class=\\" 
          icon
           
           
        \\" viewBox=\\"0 -4 44 44\\" style=\\"width: 2rem; height: 2rem;\\"><path d=\\"M18.704 36.08c-.53 0-1.044-.18-1.459-.51L4.755 24.486a2.092 2.092 0 0 1-.751-1.51 2.043 2.043 0 0 1 .6-1.576l2.278-2.403c.416-.416.98-.65 1.567-.65a2.1 2.1 0 0 1 1.328.464l8.706 7.503L34.848 8.68a2.098 2.098 0 0 1 3.078-.017l2.29 2.29a1.949 1.949 0 0 1 .672 1.41 1.987 1.987 0 0 1-.55 1.526L20.266 35.385a1.989 1.989 0 0 1-1.56.694z\\"></path></svg></div><style></style><div class=\\"checkbox-content no-margin\\"><p>A-1 check</p></div></label></div></div><style></style><div class=\\"col-5 \\"><style></style><div class=\\"checkbox-wrap\\"><input id=\\"A-2\\" name=\\"A-2\\" type=\\"checkbox\\" class=\\"manor-checkbox-input\\"><label for=\\"A-2\\" class=\\"
            
            
          \\"><div class=\\"
            manor-checkbox 
            
            
          \\"></div><style></style><div class=\\"checkbox-content no-margin\\"><p>A-2 check</p></div></label></div></div><style></style><div class=\\"col-5 \\"><style></style><div class=\\"checkbox-wrap\\"><input id=\\"A-3\\" name=\\"A-3\\" type=\\"checkbox\\" class=\\"manor-checkbox-input\\"><label for=\\"A-3\\" class=\\"
            
            
          \\"><div class=\\"
            manor-checkbox 
            
            
          \\"></div><style></style><div class=\\"checkbox-content no-margin\\"><p>A-3 check</p></div></label></div></div><style jsx=\\"true\\">.row {
        @apply flex flex-wrap -mx-16;
      }
      </style></div></div></div><style jsx=\\"true\\">.row {
        @apply flex flex-wrap -mx-16;
      }
      </style></div><div class=\\"row \\" jsx=\\"true\\"><style></style><div class=\\"col-sm-11 \\"><div class=\\"relative w-full h-16 mb-8\\"><span class=\\"absolute w-full justify-start\\"></span></div></div><style jsx=\\"true\\">.row {
        @apply flex flex-wrap -mx-16;
      }
      </style></div></div>"
`;

exports[`generateGroup renders if there are children 1`] = `
"<style></style><div class=\\"col-6 \\"><style></style><div class=\\"checkbox-wrap\\"><input id=\\"A-1\\" name=\\"A-1\\" type=\\"checkbox\\" class=\\"manor-checkbox-input\\"><label for=\\"A-1\\" class=\\"
            
            
          \\"><div class=\\"
            manor-checkbox 
            
            
          \\"></div><style></style><div class=\\"checkbox-content no-margin\\"><p>A-1 check</p></div></label></div></div><style></style><div class=\\"col-6 \\"><style></style><div class=\\"checkbox-wrap\\"><input id=\\"A-2\\" name=\\"A-2\\" type=\\"checkbox\\" class=\\"manor-checkbox-input\\"><label for=\\"A-2\\" class=\\"
            
            
          \\"><div class=\\"
            manor-checkbox 
            
            
          \\"></div><style></style><div class=\\"checkbox-content no-margin\\"><p>A-2 check</p></div></label></div></div>"
`;
